Icons added done

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         />
       </div>
       <div class="login-card-container">
+        <i class="fa fa-user-circle-o" style="font-size: 56px"></i>
         <h1 class="login-title">Log In</h1>
         <div class="login-input">
           <label class="input-name" for="name">Name :</label>
+          <i class="fa fa-user" style="font-size: 20px"></i>
           <input class="name-input" type="text" placeholder="Enter your name" />
 
           <label class="input-password" for="name">Password :</label>
+          <i class="fa fa-lock" style="font-size: 24px"></i>
           <input
             class="pw-input"
             type="text"
@@ -35,15 +38,25 @@
         </div>
 
         <div class="login-buttons">
-          <button class="btn login-btn">Log In</button>
+          <button class="btn login-btn">
+            Log In <i class="fa fa-sign-in" style="font-size: 20px"></i>
+          </button>
           <button class="btn sign-up-btn">Sign Up</button>
         </div>
 
         <div class="social-medias-icons">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
+          <div class="fb-icon">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+          </div>
+          <div class="insta-icon">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+          </div>
+          <div class="twitter-icon">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </div>
+          <div class="linked-icon">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+          </div>
         </div>
       </div>
     </div>
