check box updated

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             type="text"
             placeholder="Enter your Password "
           />
+          <div class="check-box">
+            <p class="checkbox-para">
+              <input class="checkbox-color" type="checkbox" /> Reminder me
+            </p>
+          </div>
         </div>
 
         <div class="login-buttons">
