--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <i class="fa fa-lock" style="font-size: 24px"></i>
           <input
             class="pw-input"
-            type="text"
+            type="password"
             placeholder="Enter your Password "
           />
           <div class="check-box">
