--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="fb-icon">
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </div>
-          <div class="insta-icon">
+          <div class="instagram-icon">
             <i class="fa fa-instagram" aria-hidden="true"></i>
           </div>
           <div class="twitter-icon">
