--- a/index.html
+++ b/index.html
@@ -11,56 +11,91 @@
     <title>Login Web Design</title>
   </head>
   <body>
-    <!-- #Login Container -->
-    <div id="login-container">
-      <div class="img-container">
-        <img
-          class="img-png"
-          src="/wepik-export-20231125054400TzT1.png"
-          alt="png"
-        />
-      </div>
-      <div class="login-card-container">
-        <i class="fa fa-user-circle-o" style="font-size: 56px"></i>
-        <h1 class="login-title">Log In</h1>
-        <div class="login-input">
-          <label class="input-name" for="name">Name :</label>
-          <i class="fa fa-user" style="font-size: 20px"></i>
-          <input class="name-input" type="text" placeholder="Enter your name" />
-
-          <label class="input-password" for="name">Password :</label>
-          <i class="fa fa-lock" style="font-size: 24px"></i>
-          <input
-            class="pw-input"
-            type="password"
-            placeholder="Enter your Password "
+    <div id="main-container">
+      <!-- Nav-Container -->
+      <div class="nav-container">
+        <div class="nav-logo">
+          <img
+            class="logo-png"
+            src="/31530356_bird_2-removebg-preview.png"
+            alt="png"
           />
-          <div class="check-box">
-            <p class="checkbox-para">
-              <input class="checkbox-color" type="checkbox" /> Reminder me
-            </p>
+        </div>
+        <div class="nav-details">
+          <div class="home">
+            <p class="detail-para">Home</p>
+          </div>
+          <div class="Resources">
+            <p class="detail-para">Resources</p>
+          </div>
+          <div class="About">
+            <p class="detail-para">About Us</p>
+          </div>
+          <div class="Contact">
+            <p class="detail-para">Contact Us</p>
+          </div>
+          <div class="nav-btn">
+            <button class="btn sign-nav-btn">Sign Up</button>
           </div>
         </div>
+      </div>
 
-        <div class="login-buttons">
-          <button class="btn login-btn">
-            Log In <i class="fa fa-sign-in" style="font-size: 20px"></i>
-          </button>
-          <button class="btn sign-up-btn">Sign Up</button>
+      <!-- #Login Container -->
+      <div id="login-container">
+        <div class="img-container">
+          <img
+            class="img-png"
+            src="/wepik-export-20231125054400TzT1.png"
+            alt="png"
+          />
         </div>
+        <!-- Login-Card-Container -->
+        <div class="login-card-container">
+          <i class="fa fa-user-circle-o" style="font-size: 56px"></i>
+          <h1 class="login-title">Log In</h1>
+          <div class="login-input">
+            <label class="input-name" for="name">Name :</label>
+            <i class="fa fa-user" style="font-size: 20px"></i>
+            <input
+              class="name-input"
+              type="text"
+              placeholder="Enter your name"
+            />
 
-        <div class="social-medias-icons">
-          <div class="fb-icon">
-            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <label class="input-password" for="name">Password :</label>
+            <i class="fa fa-lock" style="font-size: 24px"></i>
+            <input
+              class="pw-input"
+              type="password"
+              placeholder="Enter your Password "
+            />
+            <div class="check-box">
+              <p class="checkbox-para">
+                <input class="checkbox-color" type="checkbox" /> Reminder me
+              </p>
+            </div>
           </div>
-          <div class="instagram-icon">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+
+          <div class="login-buttons">
+            <button class="btn login-btn">
+              Log In <i class="fa fa-sign-in" style="font-size: 20px"></i>
+            </button>
+            <button class="btn sign-up-btn">Sign Up</button>
           </div>
-          <div class="twitter-icon">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-          </div>
-          <div class="linked-icon">
-            <i class="fa fa-linkedin" aria-hidden="true"></i>
+
+          <div class="social-medias-icons">
+            <div class="fb-icon">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <div class="instagram-icon">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+            <div class="twitter-icon">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="linked-icon">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </div>
           </div>
         </div>
       </div>
