--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Login Web Design</title>
   </head>
   <body>
-    <div id="main-container">
+    <div class="main-container">
       <!-- Nav-Container -->
       <div class="nav-container">
         <div class="nav-logo">
