--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="detail-para">Contact Us</p>
           </div>
           <div class="nav-btn">
-            <button class="btn sign-nav-btn">Sign Up</button>
+            <button class="btn sign-nav-btn">search</button>
           </div>
         </div>
       </div>
