--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-logo">
           <img
             class="logo-png"
-            src="/31530356_bird_2-removebg-preview.png"
+            src="/wepik-export-20231125054400TzT1.png"
             alt="png"
           />
         </div>
@@ -73,6 +73,7 @@
               <p class="checkbox-para">
                 <input class="checkbox-color" type="checkbox" /> Reminder me
               </p>
+              <p class="forgot-pw-para">Forgot password</p>
             </div>
           </div>
 
