--- a/index.html
+++ b/index.html
@@ -49,10 +49,17 @@
             src="/wepik-export-20231125054400TzT1.png"
             alt="png"
           />
+
+          <div class="main-heading">
+            <h1 class="header-title">New Cosmetics in 2023</h1>
+          </div>
         </div>
         <!-- Login-Card-Container -->
         <div class="login-card-container">
-          <i class="fa fa-user-circle-o" style="font-size: 56px"></i>
+          <div class="card-profile-icon">
+            <i class="fa fa-user-circle-o" style="font-size: 56px"></i>
+          </div>
+
           <h1 class="login-title">Log In</h1>
           <div class="login-input">
             <label class="input-name" for="name">Name :</label>
@@ -100,6 +107,16 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="hhhhh-jjj">
+        <h1>New Cosmetics in 2023</h1>
+        <h1>New Cosmetics in 2023</h1>
+        <h1>New Cosmetics in 2023</h1>
+      </div>
+      <div class="hhhhh-jjj">
+        <h1>New Cosmetics in 2023</h1>
+        <h1>New Cosmetics in 2023</h1>
+        <h1>New Cosmetics in 2023</h1>
       </div>
     </div>
   </body>
