--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
           />
 
           <div class="main-heading">
-            <h1 class="header-title">New Cosmetics in 2023</h1>
+            <h1 class="header-title">
+              NEW COSMETICS IN
+              <span style="color: rgb(211, 124, 18)">2023</span>
+            </h1>
           </div>
         </div>
         <!-- Login-Card-Container -->
@@ -107,16 +110,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="hhhhh-jjj">
-        <h1>New Cosmetics in 2023</h1>
-        <h1>New Cosmetics in 2023</h1>
-        <h1>New Cosmetics in 2023</h1>
-      </div>
-      <div class="hhhhh-jjj">
-        <h1>New Cosmetics in 2023</h1>
-        <h1>New Cosmetics in 2023</h1>
-        <h1>New Cosmetics in 2023</h1>
       </div>
     </div>
   </body>
