--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             src="/wepik-export-20231125054400TzT1.png"
             alt="png"
           />
-          <p class="logo-name">Beautify!</p>
+          <!-- <p class="logo-name">Beautify!</p> -->
         </div>
         <div class="nav-details">
           <div class="home">
@@ -49,13 +49,6 @@
             src="/wepik-export-20231125054400TzT1.png"
             alt="png"
           />
-
-          <div class="main-heading">
-            <h1 class="header-title">
-              NEW COSMETICS IN
-              <span style="color: rgb(211, 124, 18)">2023</span>
-            </h1>
-          </div>
         </div>
         <!-- Login-Card-Container -->
         <div class="login-card-container">
@@ -109,6 +102,20 @@
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- Content-container -->
+      <div class="cosmetics-content">
+        <div class="cosmetics-heading">
+          <h1 class="cosmetics-title">Trending New Cosmetics</h1>
+        </div>
+        <div class="cosmetics-details-para">
+          <p class="cosmetics-para">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            veniam debitis maxime dicta magni rem itaque fugit cum. Nihil, animi
+            laboriosam. Cum rerum officiis eaque expedita vero maxime accusamus
+            esse!
+          </p>
         </div>
       </div>
     </div>
