--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         </div>
         <div class="nav-details">
           <div class="home">
-            <p class="detail-para">Home</p>
+            <p class="detail-para">HOME</p>
           </div>
           <div class="Resources">
-            <p class="detail-para">Resources</p>
+            <p class="detail-para">RESOURCES</p>
           </div>
           <div class="About">
-            <p class="detail-para">About Us</p>
+            <p class="detail-para">ABOUT US</p>
           </div>
           <div class="Contact">
-            <p class="detail-para">Contact Us</p>
+            <p class="detail-para">CONTACT US</p>
           </div>
           <div class="nav-btn">
             <button class="btn sign-nav-btn">search</button>
