cards Updated done

--- a/index.html
+++ b/index.html
@@ -117,6 +117,201 @@
             esse!
           </p>
         </div>
+
+        <!-- card-content-container -->
+        <!-- 01 -->
+        <div class="cards-container">
+          <div class="cosmetics-cards-1">
+            <div class="card-1-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/eve-maier-bM5y2PXl1_Q-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Henricksen</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae,adipisicing elit. Vitae,adipisicing elit.
+                </p>
+                <div class="card-1-price">
+                  <h3>$590</h3>
+                  <h4 style="color: rgb(0, 176, 0)">10%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i
+                    >Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 02 -->
+
+            <div class="card-2-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/nataliya-melnychuk-PdzMmdHqN2c-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Bloglow</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae,adipisicing elit. Vitae, eum.
+                </p>
+                <div class="card-1-price">
+                  <h3>$2097</h3>
+                  <h4 style="color: rgb(0, 176, 0)">25%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- 02 -->
+
+            <div class="card-3-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/valeriia-miller-_42NKYROG7g-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Ordinary</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae, eum.adipisicing elit. Vitae,
+                </p>
+                <div class="card-1-price">
+                  <h3>$ 5180</h3>
+                  <h4 style="color: rgb(0, 176, 0)">40%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 02 -->
+          <div class="cosmetics-cards-1">
+            <div class="card-1-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/qasim-malick-Yh9FrbN5Bts-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Lipstick</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae,adipisicing elit. Vitae,adipisicing elit.
+                </p>
+                <div class="card-1-price">
+                  <h3>$190</h3>
+                  <h4 style="color: rgb(0, 176, 0)">20%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i
+                    >Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 02 -->
+
+            <div class="card-2-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/maria-lupan-Rlakka_pZMU-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Nailpolish</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae,adipisicing elit. Vitae, eum.
+                </p>
+                <div class="card-1-price">
+                  <h3>$1597</h3>
+                  <h4 style="color: rgb(0, 176, 0)">30%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- 02 -->
+
+            <div class="card-3-content">
+              <div class="cosmetics-img">
+                <img
+                  class="card-1-png"
+                  src="/sagar-sawant-civayXc2m9c-unsplash.jpg"
+                  alt="png"
+                />
+              </div>
+              <div class="card-1-details">
+                <div class="card-name-heart">
+                  <h3 class="card-1-title">Perfume</h3>
+                  <i class="fa fa-heart" style="font-size: 24px"></i>
+                </div>
+                <p class="cards-para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Vitae, eum.adipisicing elit. Vitae,
+                </p>
+                <div class="card-1-price">
+                  <h3>$ 3140</h3>
+                  <h4 style="color: rgb(0, 176, 0)">50%</h4>
+                </div>
+                <div class="card-1-btn">
+                  <button class="btn card-purchase">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
