changes few code

--- a/index.html
+++ b/index.html
@@ -110,16 +110,18 @@
           <h1 class="cosmetics-title">Trending New Cosmetics</h1>
         </div>
         <div class="cosmetics-details-para">
+          <h2 class="cosmetics-details-head">Top Categories</h2>
           <p class="cosmetics-para">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             veniam debitis maxime dicta magni rem itaque fugit cum. Nihil, animi
             laboriosam. Cum rerum officiis eaque expedita vero maxime accusamus
             esse!
           </p>
+          <i class="fa fa-angle-double-down" style="font-size: 36px"></i>
         </div>
 
         <!-- card-content-container -->
-        <!-- 01 -->
+        <!--part 01 -->
         <div class="cards-container">
           <div class="cosmetics-cards-1">
             <div class="card-1-content">
@@ -183,7 +185,7 @@
                 </div>
               </div>
             </div>
-            <!-- 02 -->
+            <!-- 03 -->
 
             <div class="card-3-content">
               <div class="cosmetics-img">
@@ -216,7 +218,7 @@
             </div>
           </div>
 
-          <!-- 02 -->
+          <!-- part 02  -->
           <div class="cosmetics-cards-1">
             <div class="card-1-content">
               <div class="cosmetics-img">
@@ -310,6 +312,12 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="cards-end-btn">
+            <button class="btn card-view-btn">
+              Purchase More
+              <i class="fa fa-angle-double-right" style="font-size: 20px"></i>
+            </button>
           </div>
         </div>
       </div>
