--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <p class="detail-para">CONTACT US</p>
           </div>
           <div class="nav-btn">
-            <button class="btn sign-nav-btn">search</button>
+            <button class="btn sign-nav-btn">
+              CART <i class="fa fa-shopping-bag" style="font-size: 20px"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -104,7 +106,7 @@
           </div>
         </div>
       </div>
-      <!-- Content-container -->
+      <!-- Content-container 03 -->
       <div class="cosmetics-content">
         <div class="cosmetics-heading">
           <h1 class="cosmetics-title">Trending New Cosmetics</h1>
@@ -205,7 +207,7 @@
                   Vitae, eum.adipisicing elit. Vitae,
                 </p>
                 <div class="card-1-price">
-                  <h3>$ 5180</h3>
+                  <h3>$5180</h3>
                   <h4 style="color: rgb(0, 176, 0)">40%</h4>
                 </div>
                 <div class="card-1-btn">
@@ -301,7 +303,7 @@
                   Vitae, eum.adipisicing elit. Vitae,
                 </p>
                 <div class="card-1-price">
-                  <h3>$ 2078</h3>
+                  <h3>$2078</h3>
                   <h4 style="color: rgb(0, 176, 0)">50%</h4>
                 </div>
                 <div class="card-1-btn">
