plan price updated

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i
-                    >Add to Cart
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
+                    Add to Cart
                   </button>
                 </div>
               </div>
@@ -181,7 +181,7 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
                     Add to Cart
                   </button>
                 </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
                     Add to Cart
                   </button>
                 </div>
@@ -245,8 +245,8 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i
-                    >Add to Cart
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
+                    Add to Cart
                   </button>
                 </div>
               </div>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
                     Add to Cart
                   </button>
                 </div>
@@ -308,7 +308,7 @@
                 </div>
                 <div class="card-1-btn">
                   <button class="btn card-purchase">
-                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                    <i class="fa fa-shopping-cart" style="font-size: 20px"></i>
                     Add to Cart
                   </button>
                 </div>
@@ -320,6 +320,172 @@
               Purchase More
               <i class="fa fa-angle-double-right" style="font-size: 20px"></i>
             </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Price Details -->
+      <div class="price-details-container">
+        <div class="price-details-top">
+          <h2 class="price-title">Pricing.</h2>
+          <p class="price-head-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            aperiam in iste nostrum. Vitae quod optio est delectus eaque ratione
+            autem sunt dolorum, eum in. Vitae ipsum itaque doloribus
+            repellendus.
+          </p>
+          <div class="price-change-btn">
+            <button class="btn yearly-btn">
+              Billed Yearly | <span style="color: rgb(255, 191, 0)">43%</span>
+            </button>
+            <button class="btn monthly-btn">Billed Monthly</button>
+          </div>
+        </div>
+        <!-- card-content-1 -->
+        <div class="card-details-main">
+          <div class="price-details-card-1">
+            <div class="price-card-1-top">
+              <p class="card-1-line-1" style="color: rgb(213, 144, 16)">
+                Starts here
+              </p>
+              <h2 class="card-1-amount">$0</h2>
+              <p class="card-1-line-para">Per month</p>
+            </div>
+            <div class="price-card-1-details">
+              <ul class="price-card-1-content">
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+              </ul>
+              <div class="card-1-bottom-btn">
+                <button class="btn card-1-plan-btn">Request Access</button>
+                <p class="card-bottom-para">Its free to use</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card-content-2 -->
+
+          <div class="price-details-card-2">
+            <div class="price-card-1-top">
+              <p class="card-2-line-1" style="color: green">Start Up</p>
+              <h2 class="card-2-amount">$8</h2>
+              <p class="card-2-line-para">Per month</p>
+            </div>
+            <div class="price-card-1-details">
+              <ul class="price-card-1-content">
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-close" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+              </ul>
+              <div class="card-2-bottom-btn">
+                <button class="btn card-2-plan-btn">Request Access</button>
+                <p class="card-bottom-para">Save $72 Per year</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card-content-3 -->
+
+          <div class="price-details-card-3">
+            <div class="price-card-1-top">
+              <p class="card-3-line-1" style="color: blue">Growth</p>
+              <h2 class="card-3-amount">$79</h2>
+              <p class="card-3-line-para">Per month</p>
+            </div>
+            <div class="price-card-1-details">
+              <ul class="price-card-1-content">
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+                <li>
+                  <i class="fa fa-check" style="font-size: 20px"></i> Access to
+                  all modules
+                </li>
+              </ul>
+              <div class="card-3-bottom-btn">
+                <button class="btn card-3-plan-btn">Request Access</button>
+                <p class="card-bottom-para">Save $480 Per year</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
