--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <!-- Price Details -->
       <div class="price-details-container">
         <div class="price-details-top">
-          <h2 class="price-title">Pricing.</h2>
+          <h2 class="price-title">Subscribe Plan</h2>
           <p class="price-head-para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             aperiam in iste nostrum. Vitae quod optio est delectus eaque ratione
