done it changes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <div class="cosmetics-img">
                 <img
                   class="card-1-png"
-                  src="/anastasia-anastasia-hTRmdSd9RKU-unsplash.jpg"
+                  src="/take-time-ZW3yslQ_zSA-unsplash.jpg"
                   alt="png"
                 />
               </div>
@@ -258,7 +258,7 @@
               <div class="cosmetics-img">
                 <img
                   class="card-1-png"
-                  src="/sagar-sawant-civayXc2m9c-unsplash.jpg"
+                  src="/nataliya-melnychuk-49c-5-bNCRk-unsplash.jpg"
                   alt="png"
                 />
               </div>
@@ -289,13 +289,13 @@
               <div class="cosmetics-img">
                 <img
                   class="card-1-png"
-                  src="/laura-chouette-i796ebPlKRc-unsplash.jpg"
+                  src="/suncademy-suncare-WKCXM67lIC0-unsplash.jpg"
                   alt="png"
                 />
               </div>
               <div class="card-1-details">
                 <div class="card-name-heart">
-                  <h3 class="card-1-title">Nailpolish</h3>
+                  <h3 class="card-1-title">Sunscreen</h3>
                   <i class="fa fa-heart" style="font-size: 24px"></i>
                 </div>
                 <p class="cards-para">
@@ -349,7 +349,7 @@
                 Starts here
               </p>
               <h2 class="card-1-amount">$0</h2>
-              <p class="card-1-line-para">Per month</p>
+              <p class="card-1-line-para">Per day</p>
             </div>
             <div class="price-card-1-details">
               <ul class="price-card-1-content">
@@ -362,29 +362,29 @@
                   <i class="fa fa-check" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
               </ul>
               <div class="card-1-bottom-btn">
-                <button class="btn card-1-plan-btn">Request Access</button>
+                <button class="btn card-1-plan-btn">Buy Now</button>
                 <p class="card-bottom-para">Its free to use</p>
               </div>
             </div>
@@ -417,25 +417,25 @@
                   <i class="fa fa-check" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
-                <li>
+                <li class="close-para">
                   <i class="fa fa-close" style="font-size: 20px"></i> Access to
                   all modules
                 </li>
               </ul>
               <div class="card-2-bottom-btn">
-                <button class="btn card-2-plan-btn">Request Access</button>
+                <button class="btn card-2-plan-btn">Buy Now</button>
                 <p class="card-bottom-para">Save $72 Per year</p>
               </div>
             </div>
@@ -447,7 +447,7 @@
             <div class="price-card-1-top">
               <p class="card-3-line-1" style="color: blue">Growth</p>
               <h2 class="card-3-amount">$79</h2>
-              <p class="card-3-line-para">Per month</p>
+              <p class="card-3-line-para">Per yearly</p>
             </div>
             <div class="price-card-1-details">
               <ul class="price-card-1-content">
@@ -482,13 +482,15 @@
                 </li>
               </ul>
               <div class="card-3-bottom-btn">
-                <button class="btn card-3-plan-btn">Request Access</button>
+                <button class="btn card-3-plan-btn">Buy Now</button>
                 <p class="card-bottom-para">Save $480 Per year</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
     </div>
   </body>
 </html>
