--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Login Web Design</title>
+    <title>Cosmetics Web Design</title>
   </head>
   <body>
     <div class="main-container">
