--- a/index.html
+++ b/index.html
@@ -324,6 +324,39 @@
         </div>
       </div>
 
+      <!-- Box New Items 04 -->
+      <div class="new-products">
+        <div class="products-img">
+          <img
+            class="products-png"
+            src="/wepik-export-202312081330328KDl.jpeg"
+            alt=""
+          />
+        </div>
+        <div class="new-products-content">
+          <p class="products-head">
+            Deeply Nourishing Hair Serum For Glowing & Healthy Hair.
+          </p>
+          <p class="products-para">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit assumenda sequi placeat nemo commodi iusto facilis
+            animi fugiat, sed velit obcaecati, beatae soluta vero rerum,
+            nesciunt est aperiam doloremque itaque!
+          </p>
+          <div class="products-icons">
+            <i class="fa fa-balance-scale" style="font-size: 24px"></i>
+            <p class="product-icon-text">Sulphate Free</p>
+            <i class="fa fa-leaf" style="font-size: 24px"> </i>
+            <p class="product-icon-text">Strong and Smooth</p>
+            <i class="fa fa-flask" style="font-size: 24px"> </i>
+            <p class="product-icon-text">Vegan 100%</p>
+          </div>
+          <div class="products-button">
+            <button class="btn products-btn">Available Now</button>
+          </div>
+        </div>
+      </div>
+
       <!-- Price Details -->
       <div class="price-details-container">
         <div class="price-details-top">
@@ -489,8 +522,6 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </body>
 </html>
