--- a/index.html
+++ b/index.html
@@ -357,6 +357,27 @@
         </div>
       </div>
 
+      <!-- Branded img 04 -->
+      <div class="brands-container">
+        <div class="brands-img">
+          <img class="brands-png" src="/Amouage_logo_PNG1.png" alt="png" />
+          <img class="brands-png" src="/Fairy_logo_PNG2.png" alt="png" />
+          <img
+            class="brands-png"
+            src="/Herbal_Essences_logo_PNG1.png"
+            alt="png"
+          />
+          <img class="brands-png" src="/Jessica_logo_PNG1.png" alt="png" />
+          <img class="brands-png" src="/Naturella_logo_PNG1.png" alt="png" />
+          <img class="brands-png" src="/Garnier_logo_PNG6.png" alt="png" />
+          <img
+            class="brands-png"
+            src="/Amuse_Cosmetics_logo_PNG1.png"
+            alt="png"
+          />
+        </div>
+      </div>
+
       <!-- Price Details -->
       <div class="price-details-container">
         <div class="price-details-top">
