--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             src="/wepik-export-20231125054400TzT1.png"
             alt="png"
           />
-          <!-- <p class="logo-name">Beautify!</p> -->
+          <!-- <p class="logo-name">aariYa</p> -->
         </div>
         <div class="nav-details">
           <div class="home">
