--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <!-- card-content-container -->
         <!--part 01 -->
         <div class="cards-container">
+        </div>
           <div class="cosmetics-cards-1">
             <div class="card-1-content">
               <div class="cosmetics-img">
@@ -544,6 +545,71 @@
           </div>
         </div>
       </div>
+
+
+        <!-- footer container............................ -->
+      <div class="footer-main">
+      <div class="footer-container">
+        <div class="footer-background-img">
+          <img
+            class="footer-background-png"
+            src="engin-akyurt-X8YN3aOJ18I-unsplash.jpg"
+            alt="png"
+          />
+        </div>
+        
+        <div class="footer-start">
+          <div class="footer-img">
+            <img
+              class="footer-png"
+              src="/wepik-export-20231125054400TzT1.png"
+              alt="png"
+            />
+          </div>
+          <div class="footer-content">
+            <h3 class="footer-tittle">
+              Riya..</span
+              >
+            </h3>
+            <p class="footer-para">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facere inventore nisi! Nam nulla aliquid sit suscipit illo cum eligendi! Consequatur in sunt culpa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facere inventore nisi! cum eligendi! Consequatur eos asperiores  in sunt culpa!
+            </p>
+              <div class="footer-icons">
+              <i class="fa fa-facebook-f" style="font-size:24px"></i>
+              <i class="fa fa-instagram" style="font-size:24px"></i>
+              <i class="fa fa-linkedin-square" style="font-size:24px"></i>
+              <i class="fa fa-twitter" style="font-size:24px"></i>
+              </div>
+          </div>
+        </div>
+
+        <div class="footer-terms">
+
+        <div class="footer-about">
+          <ul class="about-us">
+            <span class="footer-heading">About Us</span>
+            <li class="footer-li">Connect</li>
+            <li class="footer-li">Terms Work</li>
+            <li class="footer-li">Support</li>
+            <li class="footer-li">Communication</li>
+            <li class="footer-li">Responsive</li>
+          </ul>
+        </div>
+
+          <div class="footer-about">
+          <ul class="about-us">
+            <span class="footer-heading">New Updates</span>
+            <li class="footer-li">Every Monday</li>
+            <li class="footer-li"> Monthly</li>
+          </ul>
+          <form class="email-form">
+            <input type="email" class="emails" name="emails" >
+            <input type="submit" class="email-input">
+          </form>
+        </div>
+        </div>
+        </div>
+        </div>
     </div>
   </body>
 </html>
