--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <div class="products-img">
           <img
             class="products-png"
-            src="/wepik-export-202312081330328KDl.jpeg"
+            src="/healthy-lifestyle-collection-beauty-treatment-hygiene-equipment-medicine-generated-by-ai.jpg"
             alt=""
           />
         </div>
@@ -575,10 +575,10 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facere inventore nisi! Nam nulla aliquid sit suscipit illo cum eligendi! Consequatur in sunt culpa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati facere inventore nisi! cum eligendi! Consequatur eos asperiores  in sunt culpa!
             </p>
               <div class="footer-icons">
-              <i class="fa fa-facebook-f" style="font-size:24px"></i>
-              <i class="fa fa-instagram" style="font-size:24px"></i>
-              <i class="fa fa-linkedin-square" style="font-size:24px"></i>
-              <i class="fa fa-twitter" style="font-size:24px"></i>
+              <i class="fa fa-facebook-f" style="font-size:20px"></i>
+              <i class="fa fa-instagram" style="font-size:20px"></i>
+              <i class="fa fa-linkedin-square" style="font-size:20px"></i>
+              <i class="fa fa-twitter" style="font-size:20px"></i>
               </div>
           </div>
         </div>
